--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,3 +2,6 @@
 #    path: /
 #    controller: App\Controller\DefaultController::index
 # routes.yaml
+app_produit_details:
+    path: '/produit/{ref_Produit}'
+    controller: App\Controller\ProduitController::details
