update3 api et metier

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=true
 APP_SECRET=5f2c3e0b250966a0b95d27a2744d029c
 ###< symfony/framework-bundle ###
 
