--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-bundle": "^2.8",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "dompdf/dompdf": "^2.0",
         "mercuryseries/flashy-bundle": "^5.1",
         "nelmio/cors-bundle": "*",
         "phpdocumentor/reflection-docblock": "^5.3",
