--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,10 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    image_directory: '%kernel.project_dir%/public/uploads'
 
 services:
-    Symfony\Component\HttpKernel\Profiler\Profiler: '@profiler'
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
@@ -22,9 +20,8 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-   
-
-
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-
+    App\Service\FileUploader:
+        arguments:
+            $targetDirectory: '%kernel.project_dir%/public/images'
